--- a/index.html
+++ b/index.html
@@ -7,27 +7,7 @@
 </head>
 <body>
 
-<div class="inputs">
+<h1>Hello world</h1>
 
-    <div>
-        <label for="email-input">Email:</label>
-        <input id="email-input"
-               type="email"
-               placeholder="address@gamil.com"/>
-    </div>
-
-    <div>
-        <label for="postal-code-input">Postal code:</label>
-        <input id="postal-code-input"
-               placeholder="00-000"
-               pattern="\d{2}-\d{3}"
-               type="text"
-               size="6"
-               maxlength="6"/>
-    </div>
-
-    <button type="submit">submit</button>
-
-</div>
 </body>
 </html>
