--- a/lab1/index.html
+++ b/lab1/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 
-<h1>Hello world</h1>
+<div class="inputs">
+
+    <div>
+        <label for="email-input">Email:</label>
+        <input id="email-input"
+               type="email"
+               placeholder="address@gamil.com"/>
+    </div>
+
+</div>
 
 </body>
 </html>
