website and file

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -60,6 +60,25 @@
                required/>
     </div>
 
+    <div>
+        <label for="www-input">Website:</label>
+        <input id="www-input"
+               placeholder="https://www.google.com/"
+               type="url"
+               required/>
+    </div>
+
+    <div>
+        <label for="file-path-input">File path:</label>
+        <input id="file-path-input"
+               placeholder="C:\windows\temp"
+               pattern="[A-Z]:(\\(windows|winnt|win|dos|msdos))(\\(\w)+)*"
+               type="text"
+               required/>
+    </div>
+
+
+
 </div>
 
 </body>
