--- a/lab1/index.html
+++ b/lab1/index.html
@@ -79,6 +79,16 @@
     </div>
 
     <div>
+        <label for="directory-path2-input">Directory path:</label>
+        <input id="directory-path2-input"
+               placeholder="C:\WindOws\temp"
+               type="text"
+               required
+               onchange="check()"
+               oninput="check()"/>
+    </div>
+
+    <div>
         <label for="file-path-input">File path:</label>
         <input id="file-path-input"
                placeholder="/etc/file"
