--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
-    <title>lab1</title>
+    <title>lab2</title>
     <script src="script.js"></script>
 </head>
 <body>
@@ -73,7 +73,7 @@
         <label for="directory-path-input">Directory path:</label>
         <input id="directory-path-input"
                placeholder="C:\windows\temp"
-               pattern="[A-Za-z]:(\\(windows|winnt|win|dos|msdos))(\\(\w)+)*"
+               pattern="^[A-Za-z]:(\\(windows|winnt|win|dos|msdos))(\\(\w)+)*$"
                type="text"
                required/>
     </div>
