--- a/lab2/index.html
+++ b/lab2/index.html
@@ -114,6 +114,13 @@
                required/>
     </div>
 
+    <div>
+        <label for="date-input">Date:</label>
+        <input id="date-input"
+               type="date"
+               required/>
+    </div>
+
     <button type="button" onclick="fillData()">Fill data</button>
 
 </div>
