--- a/lab2/index.html
+++ b/lab2/index.html
@@ -128,6 +128,22 @@
                required/>
     </div>
 
+    <div>
+        <label for="time-12-input">Time 12:</label>
+        <input id="time-12-input"
+               type="text"
+               placeholder="11:25AM"
+               required/>
+    </div>
+
+    <div>
+        <label for="time-24-input">Time 24:</label>
+        <input id="time-24-input"
+               type="text"
+               placeholder="22:44"
+               required/>
+    </div>
+
     <button type="button" onclick="fillData()">Fill data</button>
 
 </div>
