--- a/lab2/index.html
+++ b/lab2/index.html
@@ -146,6 +146,14 @@
                required/>
     </div>
 
+
+    <div>
+        <label for="color-input">Color:</label>
+        <input id="color-input"
+               type="color"
+               required/>
+    </div>
+
     <button type="button" onclick="fillData()">Fill data</button>
 
 </div>
