Change button label

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -154,7 +154,7 @@
                required/>
     </div>
 
-    <button type="button" onclick="fillData()">Fill data</button>
+    <button type="button" onclick="fillData()">Dane losowe</button>
 
 </div>
 
