--- a/lab2/index.html
+++ b/lab2/index.html
@@ -65,7 +65,8 @@
         <label for="www-input">Website:</label>
         <input id="www-input"
                placeholder="https://www.google.com/"
-               type="url"
+               pattern="^[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,}\.[a-z]{2,}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)$"
+               type="text"
                required/>
     </div>
 
