--- a/lab3/index.html
+++ b/lab3/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-
+<ol>
+    <li draggable="true">Element 1</li>
+    <li draggable="true">Element 1</li>
+    <li draggable="true">Element 1</li>
+    <li draggable="true">Element 1</li>
+    <li draggable="true">Element 1</li>
+</ol>
 
 </body>
 </html>
