--- a/lab3/index.html
+++ b/lab3/index.html
@@ -6,7 +6,7 @@
     <title>lab3</title>
     <script src="script.js"></script>
 </head>
-<body>
+<body onload="initPage()">
 
 <ol>
     <li draggable="true">Element 1</li>
