--- a/lab3/index.html
+++ b/lab3/index.html
@@ -8,12 +8,12 @@
 </head>
 <body onload="initPage()">
 
-<ol>
+<ol id="draggable-list">
     <li draggable="true">Element 1</li>
-    <li draggable="true">Element 1</li>
-    <li draggable="true">Element 1</li>
-    <li draggable="true">Element 1</li>
-    <li draggable="true">Element 1</li>
+    <li draggable="true">Element 2</li>
+    <li draggable="true">Element 3</li>
+    <li draggable="true">Element 4</li>
+    <li draggable="true">Element 5</li>
 </ol>
 
 </body>
