--- a/lab3/index.html
+++ b/lab3/index.html
@@ -8,13 +8,22 @@
 </head>
 <body onload="initPage()">
 
-<ol id="draggable-list">
-    <li draggable="true">Element 1</li>
-    <li draggable="true">Element 2</li>
-    <li draggable="true">Element 3</li>
-    <li draggable="true">Element 4</li>
-    <li draggable="true">Element 5</li>
-</ol>
+<div id="content">
+    <div id="list-container">
+        <ol id="draggable-list">
+            <li draggable="true">Element 1</li>
+            <li draggable="true">Element 2</li>
+            <li draggable="true">Element 3</li>
+            <li draggable="true">Element 4</li>
+            <li draggable="true">Element 5</li>
+        </ol>
+    </div>
+
+    <div id="blocks-container">
+
+    </div>
+
+</div>
 
 </body>
 </html>
