--- a/lab3/index.html
+++ b/lab3/index.html
@@ -20,6 +20,20 @@
     </div>
 
     <div id="blocks-container">
+        <div id="area">
+
+        </div>
+
+        <div id="tools">
+            <div id="resp">
+
+            </div>
+            <div id="button">
+                <button onclick="generateBlock()">
+                    Generuj
+                </button>
+            </div>
+        </div>
 
     </div>
 
