list add element

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -10,6 +10,8 @@
 
 <div id="content">
     <div id="list-container">
+        <input id="input-list" type="text"/>
+        <button onclick="addToList()">Dodaj</button>
         <ol id="draggable-list">
             <li draggable="true">Element 1</li>
             <li draggable="true">Element 2</li>
