deleting elements from list

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -13,7 +13,7 @@
         <input id="input-list" type="text"/>
         <button onclick="addToList()">Dodaj</button>
         <ol id="draggable-list">
-            <li draggable="true">Element 1</li>
+            <li draggable="true">Element 1<button onclick="deleteElement(event)">x</button></li>
             <li draggable="true">Element 2</li>
             <li draggable="true">Element 3</li>
             <li draggable="true">Element 4</li>
