--- a/lab3/index.html
+++ b/lab3/index.html
@@ -14,10 +14,10 @@
         <button onclick="addToList()">Dodaj</button>
         <ol id="draggable-list">
             <li draggable="true">Element 1<button onclick="deleteElement(event)">x</button></li>
-            <li draggable="true">Element 2</li>
-            <li draggable="true">Element 3</li>
-            <li draggable="true">Element 4</li>
-            <li draggable="true">Element 5</li>
+            <li draggable="true">Element 2<button onclick="deleteElement(event)">x</button></li>
+            <li draggable="true">Element 3<button onclick="deleteElement(event)">x</button></li>
+            <li draggable="true">Element 4<button onclick="deleteElement(event)">x</button></li>
+            <li draggable="true">Element 5<button onclick="deleteElement(event)">x</button></li>
         </ol>
     </div>
 
