db functions wip

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -156,6 +156,8 @@
     </div>
 
     <button type="button" onclick="fillData()">Dane losowe</button>
+    <button onclick="savedata()">save</button>
+    <button onclick="loaddata()">load</button>
 
 </div>
 
