load fun finished

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
-    <title>lab2</title>
+    <title>lab4</title>
     <script src="script.js"></script>
 </head>
 <body onload="initInput()">
@@ -156,8 +156,8 @@
     </div>
 
     <button type="button" onclick="fillData()">Dane losowe</button>
-    <button onclick="savedata()">save</button>
-    <button onclick="loaddata()">load</button>
+    <button type="button" onclick="saveData()">save</button>
+
 
 </div>
 
