--- a/lab4/index.html
+++ b/lab4/index.html
@@ -158,6 +158,9 @@
     <button type="button" onclick="fillData()">Dane losowe</button>
     <button type="button" onclick="saveData()">save</button>
 
+    <ul id="data-list">
+
+    </ul>
 
 </div>
 
