--- a/lab4_1/index.html
+++ b/lab4_1/index.html
@@ -158,7 +158,17 @@
     <button type="button" onclick="fillData()">Dane losowe</button>
     <button type="button" onclick="saveData()">save</button>
 
-    <ul id="data-list">
+    <table>
+        <thead>
+        <tr></tr>
+
+        </thead>
+        <tbody id="data-list">
+
+        </tbody>
+
+    </table>
+    <ul>
 
     </ul>
 
