add table headers

--- a/lab4_1/index.html
+++ b/lab4_1/index.html
@@ -158,10 +158,28 @@
     <button type="button" onclick="fillData()">Dane losowe</button>
     <button type="button" onclick="saveData()">save</button>
 
+    <div></div>
+
     <table>
         <thead>
-        <tr></tr>
-
+        <tr>
+            <th>email</th>
+            <th>postal-code</th>
+            <th>nip</th>
+            <th>id-number</th>
+            <th>ip-v4</th>
+            <th>www</th>
+            <th>directory-path</th>
+            <th>directory-path2</th>
+            <th>file-path</th>
+            <th>ip-v6</th>
+            <th>phone</th>
+            <th>date</th>
+            <th>current-week-date</th>
+            <th>time-12</th>
+            <th>time-24</th>
+            <th>color</th>
+        </tr>
         </thead>
         <tbody id="data-list">
 
