--- a/lab4_1/index.html
+++ b/lab4_1/index.html
@@ -179,6 +179,7 @@
             <th>time-12</th>
             <th>time-24</th>
             <th>color</th>
+            <th>actions</th>
         </tr>
         </thead>
         <tbody id="data-list">
