table headers updated

--- a/lab4_1/index.html
+++ b/lab4_1/index.html
@@ -163,23 +163,23 @@
     <table>
         <thead>
         <tr>
-            <th>email</th>
-            <th>postal-code</th>
-            <th>nip</th>
-            <th>id-number</th>
-            <th>ip-v4</th>
-            <th>www</th>
-            <th>directory-path</th>
-            <th>directory-path2</th>
-            <th>file-path</th>
-            <th>ip-v6</th>
-            <th>phone</th>
-            <th>date</th>
-            <th>current-week-date</th>
-            <th>time-12</th>
-            <th>time-24</th>
-            <th>color</th>
-            <th>actions</th>
+            <th>Email</th>
+            <th>Postal Code</th>
+            <th>NIP</th>
+            <th>Id Number</th>
+            <th>IPv4</th>
+            <th>Website</th>
+            <th>Dir Path</th>
+            <th>Dir Path2</th>
+            <th>File Path</th>
+            <th>IPv6</th>
+            <th>Phone</th>
+            <th>Date</th>
+            <th>Current Week Date</th>
+            <th>Time 12</th>
+            <th>Time 24</th>
+            <th>Color</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody id="data-list">
