Search input WIP

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
-    <title>lab4_1</title>
+    <title>lab5</title>
     <script src="script.js"></script>
 </head>
 <body onload="initInput()">
@@ -178,6 +178,12 @@
         <div></div>
     </div>
 </form>
+<div>
+    <input id="search-input"
+           type="text"
+           placeholder="Search"
+    onchange=""/>
+</div>
 <div>
     <table>
         <thead>
