search function finish

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -182,7 +182,7 @@
     <input id="search-input"
            type="text"
            placeholder="Search"
-           onkeydown="searchChange()"/>
+           oninput="searchChange()"/>
 </div>
 <div>
     <table>
