--- a/lab5/index.html
+++ b/lab5/index.html
@@ -13,7 +13,8 @@
 
         <div>
             <label for="email-input">Email:</label>
-            <input id="email-input"
+            <input class="form-input"
+                   id="email-input"
                    form="client-form"
                    type="email"
                    placeholder="address@gamil.com"
@@ -22,7 +23,8 @@
 
         <div>
             <label for="postal-code-input">Postal code:</label>
-            <input id="postal-code-input"
+            <input class="form-input"
+                   id="postal-code-input"
                    form="client-form"
                    placeholder="00-000"
                    pattern="\d{2}-\d{3}"
@@ -34,7 +36,8 @@
 
         <div>
             <label for="nip-input">NIP:</label>
-            <input id="nip-input"
+            <input class="form-input"
+                   id="nip-input"
                    form="client-form"
                    placeholder="PL-000-000000-0"
                    pattern="[A-Z]{2}-\d{3}-\d{6}-\d"
@@ -46,7 +49,8 @@
 
         <div>
             <label for="id-number-input">Id number:</label>
-            <input id="id-number-input"
+            <input class="form-input"
+                   id="id-number-input"
                    form="client-form"
                    placeholder="ABC123456"
                    pattern="[A-Z]{3}\d{6}"
@@ -58,7 +62,8 @@
 
         <div>
             <label for="ip-v4-input">IPv4:</label>
-            <input id="ip-v4-input"
+            <input class="form-input"
+                   id="ip-v4-input"
                    form="client-form"
                    placeholder="255.255.255.255"
                    pattern="(((\d)|([1-9]\d)|([1]\d\d)|([2][0-4]\d)|([2][5][0-5]))[.]){3}((\d)|([1-9]\d)|([1]\d\d)|([2][0-4]\d)|([2][5][0-5]))"
@@ -69,7 +74,8 @@
 
         <div>
             <label for="www-input">Website:</label>
-            <input id="www-input"
+            <input class="form-input"
+                   id="www-input"
                    form="client-form"
                    placeholder="https://www.google.com/"
                    pattern="^[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,}\.[a-z]{2,}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)$"
@@ -79,7 +85,8 @@
 
         <div>
             <label for="directory-path-input">Directory path:</label>
-            <input id="directory-path-input"
+            <input class="form-input"
+                   id="directory-path-input"
                    form="client-form"
                    placeholder="C:\windows\temp"
                    pattern="^[A-Za-z]:(\\(windows|winnt|win|dos|msdos))(\\(\w)+)*$"
@@ -89,7 +96,8 @@
 
         <div>
             <label for="directory-path2-input">Directory path:</label>
-            <input id="directory-path2-input"
+            <input class="form-input"
+                   id="directory-path2-input"
                    form="client-form"
                    placeholder="C:\WindOws\temp"
                    type="text"
@@ -100,7 +108,8 @@
 
         <div>
             <label for="file-path-input">File path:</label>
-            <input id="file-path-input"
+            <input class="form-input"
+                   id="file-path-input"
                    form="client-form"
                    placeholder="/etc/file"
                    pattern="/etc/(\w)+"
@@ -110,7 +119,8 @@
 
         <div>
             <label for="ip-v6-input">IPv6:</label>
-            <input id="ip-v6-input"
+            <input class="form-input"
+                   id="ip-v6-input"
                    form="client-form"
                    placeholder="2001:0db8:3c4d:0015:0000:0000:1a2f:1a2b"
                    pattern="([0-9a-fA-F]{1,4}:){7}[0-9a-fA-F]{1,4}"
@@ -120,7 +130,8 @@
 
         <div>
             <label for="phone-input">Phone number:</label>
-            <input id="phone-input"
+            <input class="form-input"
+                   id="phone-input"
                    form="client-form"
                    placeholder="555 666 777"
                    type="tel"
@@ -129,7 +140,8 @@
 
         <div>
             <label for="date-input">Date:</label>
-            <input id="date-input"
+            <input class="form-input"
+                   id="date-input"
                    form="client-form"
                    type="date"
                    required/>
@@ -137,7 +149,8 @@
 
         <div>
             <label for="current-week-date-input">Current week date:</label>
-            <input id="current-week-date-input"
+            <input class="form-input"
+                   id="current-week-date-input"
                    form="client-form"
                    type="date"
                    required/>
@@ -145,7 +158,8 @@
 
         <div>
             <label for="time-12-input">Time 12:</label>
-            <input id="time-12-input"
+            <input class="form-input"
+                   id="time-12-input"
                    form="client-form"
                    type="text"
                    pattern="^((0?[1-9])|([1][0-2])):[0-5]?\d[aApP][mM]$"
@@ -155,7 +169,8 @@
 
         <div>
             <label for="time-24-input">Time 24:</label>
-            <input id="time-24-input"
+            <input class="form-input"
+                   id="time-24-input"
                    form="client-form"
                    type="text"
                    pattern="^(([0-1]?\d)|([2][0-3])):[0-5]?\d$"
@@ -166,7 +181,8 @@
 
         <div>
             <label for="color-input">Color:</label>
-            <input form="client-form"
+            <input class="form-input"
+                   form="client-form"
                    id="color-input"
                    type="color"
                    required/>
