Add label to search input

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -194,10 +194,11 @@
         <div></div>
     </div>
 </form>
-<div>
+<div class="search-input-container">
+    <label for="search-input">Search for clients:</label>
     <input id="search-input"
            type="text"
-           placeholder="Search"
+           placeholder="Search..."
            oninput="searchChange()"/>
 </div>
 <div>
