--- a/lab6/index.html
+++ b/lab6/index.html
@@ -12,6 +12,36 @@
     <div class="inputs">
 
         <div>
+            <label for="first-name-input">First name:</label>
+            <input class="form-input"
+                   id="first-name-input"
+                   form="client-form"
+                   type="text"
+                   placeholder="Jan"
+                   required/>
+        </div>
+
+        <div>
+            <label for="last-name-input">Last name:</label>
+            <input class="form-input"
+                   id="last-name-input"
+                   form="client-form"
+                   type="text"
+                   placeholder="Kowalski"
+                   required/>
+        </div>
+
+        <div>
+            <label for="company-input">Company:</label>
+            <input class="form-input"
+                   id="company-input"
+                   form="client-form"
+                   type="text"
+                   placeholder="Microsoft"
+                   required/>
+        </div>
+
+        <div>
             <label for="email-input">Email:</label>
             <input class="form-input"
                    id="email-input"
