new fields added to datatable

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -235,6 +235,9 @@
     <table>
         <thead>
         <tr>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Company</th>
             <th>Email</th>
             <th>Postal Code</th>
             <th>NIP</th>
